--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .container {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 3fr 3fr 9fr 1fr;
 }
 
